--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 Git is a disturbuted version control system.
 Git is free softwaer distributed under the GPL.
+Git has a mutable index called stage.
