--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Git is a disturbuted version control system.
 Git is free softwaer distributed under the GPL.
 Git has a mutable index called stage.
+Git tracks changes.
