--- a/README
+++ b/README
@@ -3,3 +3,5 @@ Git is free softwaer distributed under the GPL.
 Git has a mutable index called stage.
 Git tracks changes.
 Createing a ner branch is quick.
+Createing a ner branch is quick ADD simple.
+
