--- a/README
+++ b/README
@@ -2,4 +2,5 @@ Git is a disturbuted version control system.
 Git is free softwaer distributed under the GPL.
 Git has a mutable index called stage.
 Git tracks changes.
-Createing a ner branch is quick.
+Createing a new branch is quick.
+Createing a new branch is qucick & simple.
